Beschriftung für die vergrößerte Ansicht hinterlegt; Focus bei Overflow Elementen definiert; Fix für aria-hidden Elemente im Slider

--- a/Resources/Public/Sass/gallery.scss
+++ b/Resources/Public/Sass/gallery.scss
@@ -72,6 +72,10 @@ $ce-gallery--layout-slider: true !default;
 				}
 			}
 
+			.gallery--image {
+				@extend %accessibility-focus-overflow;
+			}
+
 			.slider {
 				& {
 					@extend %slider-controls;
